<resources>
    <string name="app_name">OHaraEdward_CrossPlatform</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="add">Add</string>
    <string name="please_add_contact">Please add contact</string>
    <string name="add_contact">Add Contact</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="name">Name:</string>
    <string name="phone">Phone:</string>
    <string name="edit_contact">Edit Contact</string>
</resources>
